Added examples of system calls.

--- a/02.02-unix/Makefile
+++ b/02.02-unix/Makefile
@@ -1,4 +1,7 @@
-CFLAGS = -Wall -Wextra -Werror -ansi -pedantic
+# NOTE: As programmers who ostensibly know what we are doing, we can drop the
+#       -Werror flag and switch to the latest GNU 11 standard supported by the
+#       Cal Poly UNIX servers.
+CFLAGS = -Wall -Wextra -std=gnu11 -pedantic
 
 all: copy fcopy
 
